[gd_scene load_steps=4 format=3 uid="uid://c8qkfxnsqrydj"]

[ext_resource type="Texture2D" uid="uid://vjnf83spe4ne" path="res://assets/mail game/mail set.png" id="1_fhajb"]
[ext_resource type="Script" path="res://scripts/skiing_ui.gd" id="1_s2h4k"]
[ext_resource type="LabelSettings" uid="uid://bq3obqsgm7fho" path="res://ui/ui_label_settings.tres" id="2_r4frh"]

[node name="SkiingUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2h4k")

[node name="TimePanel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -14.3527
offset_top = 3.82363
offset_right = 14.6473
offset_bottom = 16.8236
grow_horizontal = 2
texture = ExtResource("1_fhajb")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Time" type="Label" parent="TimePanel"]
layout_mode = 0
offset_left = 5.35273
offset_top = 3.17637
offset_right = 25.3527
offset_bottom = 9.17637
text = "00:00"
label_settings = ExtResource("2_r4frh")
horizontal_alignment = 1

[node name="RetryPanel" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 132.0
offset_right = 57.0
offset_bottom = 145.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_fhajb")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="ZLabel" type="Label" parent="RetryPanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 8.0
offset_bottom = 9.0
text = "z"
label_settings = ExtResource("2_r4frh")

[node name="Label" type="Label" parent="RetryPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 9.0
text = "- restart"
label_settings = ExtResource("2_r4frh")

[node name="HighscorePanel" type="NinePatchRect" parent="."]
visible = false
layout_mode = 0
offset_left = 95.0
offset_top = 19.0
offset_right = 146.0
offset_bottom = 41.0
texture = ExtResource("1_fhajb")
region_rect = Rect2(80, 16, 16, 16)
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Label" type="Label" parent="HighscorePanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 3.0
offset_right = 49.0
offset_bottom = 9.0
text = "best time :"
label_settings = ExtResource("2_r4frh")

[node name="HighscoreLabel" type="Label" parent="HighscorePanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 11.0
offset_right = 36.0
offset_bottom = 17.0
text = "00:00"
label_settings = ExtResource("2_r4frh")
